--- a/WpfApplication17/PageSettingType.xaml
+++ b/WpfApplication17/PageSettingType.xaml
@@ -15,7 +15,7 @@
             <RowDefinition Height="8*"/>
             <RowDefinition Height="2*"/>
         </Grid.RowDefinitions>
-        <local:TopSub x:Name="UCSub" Grid.Row="0"></local:TopSub>
+        <local:TopSub x:Name="UCSub" Grid.Row="0" Padding="10 0"></local:TopSub>
         <DockPanel Grid.Row="1" Background="#ccc"></DockPanel>
         <Grid  Grid.Row="2">
             <Grid.RowDefinitions>
@@ -81,16 +81,17 @@
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="3*" />
+                    <ColumnDefinition Width="2*" />
 
                 </Grid.ColumnDefinitions>
-                <TextBox Name="txtTypeName" HorizontalAlignment="Stretch" Text="Enter Type" FontSize="26"  Padding="20 15" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" VerticalAlignment="Center" Margin="125 00 15 0" Style="{DynamicResource TextBoxStyle1}" ></TextBox>
+                <TextBlock HorizontalAlignment="Stretch" Text="Type" FontSize="26"  Padding="20 15" Grid.Row="1" Grid.Column="0"  VerticalAlignment="Center"></TextBlock>
+                <TextBox Name="txtRTypeName" HorizontalAlignment="Stretch" Text="{Binding EmployeeTypeName,Mode=TwoWay}" FontSize="26"  Padding="20 15" Grid.Row="1" Grid.Column="1"  VerticalAlignment="Center" Margin="25 00 15 0" Style="{DynamicResource TextBoxStyle1}" ></TextBox>
 
 
 
 
-                <Button x:Name="BtnAddType" Grid.Row="2"  Grid.Column="1"  HorizontalAlignment="Center" VerticalAlignment="Top" Cursor="Hand" Margin="108,20,15,0"   Content="Save " Width="242" Style="{DynamicResource ButtonStyle2}" FontSize="20" FontWeight="SemiBold" Foreground="White"  Height="50" Click="BtnStartMatch_Click"  />
+                <Button x:Name="BtnAddType" Grid.Row="2"  Grid.Column="1"  HorizontalAlignment="Center" VerticalAlignment="Top" Cursor="Hand" Margin="108,20,15,0"   Content="Save " Width="242" Style="{DynamicResource ButtonStyle2}" FontSize="20" FontWeight="SemiBold" Foreground="White"  Height="50" Click="BtnAddType_Click"  />
             </Grid>
         </Grid>
         <DockPanel Background="#3f3f3f" Grid.Row="3">
